# rules_rdf

./: CHANGELOG.md  README.md
docs/: BUILD.bazel  ROADMAP.md  contract_test.md  dataset.md  providers.md  reason.md  sparql.md  toolchains.md  transform.md  validate.md
examples/smoke/: BUILD.bazel  linked.ttl  no_op_reasoner.sh  no_op_serializer.sh  no_op_sparql.py  no_op_sparql.sh  no_op_validator.sh  ont_child.ttl  ont_parent.ttl  query.rq  shapes.ttl
rdf/: BUILD.bazel  aspects.bzl  contract_test.bzl  dataset.bzl  extensions.bzl  merge.bzl  namespace.bzl  ns_tool.py  plugin_contract.md  providers.bzl  repositories.bzl  toolchains.bzl
reason/: defs.bzl
sparql/: BUILD.bazel  defs.bzl
tools/contract_test/: BUILD.bazel  contract_test.py
transform/: BUILD.bazel  defs.bzl
validate/: defs.bzl
